# stock-analyzer

./: .gitignore  ARCHIVE-2026-05-24.md  README.md  TEST_REPORT.md  build.ps1  check-deps.ps1  playwright_test.py  test_llm.py  test_stock_analyzer.py  启动后端服务.bat  启动完整应用.bat
backend/: __init__.py  backtest_engine.py  check_002901.py  debug_002901.py  main.py  requirements.txt  test_002901.py  test_api.py  test_debug.py  test_e2e.py  test_explore.py  test_extract.py  test_fix.py  test_flow.ps1  test_flow.py  test_key.py  test_with_opps.py
backend/data_fetcher/: __init__.py  fetcher.py
backend/db/: database.py
backend/explorer/: engine.py
backend/indicators/: calculator.py
docs/: SETUP.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  router.js  style.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: commands.rs  lib.rs  main.rs
frontend/src/utils/: api.js
frontend/src/views/: BacktestView.vue  ExploreView.vue  LogicConfigView.vue  SettingsView.vue  StocksView.vue
vnpy_alternative/: backtest_demo.py
