[package]
name = "stock-analyzer"
version = "0.1.0"
description = "Stock buy-point formula explorer"
authors = ["you"]
edition = "2021"

[lib]
name = "stock_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true
lto = true
opt-level = "s"
panic = "abort"